--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   http: ^0.12.0+2
   json_annotation: ^3.0.0
-  cached_network_image: ^1.1.3
+  cached_network_image: 2.0.0-rc
 
   flutter:
     sdk: flutter
