--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  http: ^0.12.0+2
-  json_annotation: ^3.0.0
+  http: 0.12.0+2
+  json_annotation: 3.0.0
   cached_network_image: 2.0.0-rc
 
   flutter:
